Fixed social margin on mobile

--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ body {
 
 .social {
   margin-top: 30px;
+  margin-bottom: 15px;
 }
 
 .social .item {
